--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
-POSTGRES_USER=cassandra
-POSTGRES_PASSWORD=cassandra
-POSTGRES_DB=cassandra
-DATABASE_URL=postgresql://cassandra:cassandra@postgres:5432/cassandra
+# API / Backend
+FILE_SERVER_URL=http://localhost:8080
 
-SSHFS_USER=vlffetch
-VLF_HOST=100.76.133.15
-REMOTE_BASE=C:/htdocs/VLF
-SSH_KEY_PATH=/root/.ssh/id_ed25519
-VLF_MOUNT=/mnt/vlf            # *inside* the container
+# SSH Configuration for both App (listing files) and Proxy (mounting files)
+SSH_USER=user
+SSH_HOST=100.76.133.15
+# This is the path INSIDE the container where the key will be.
+SSH_PRIVATE_KEY_PATH=/app/ssh/id_ed25519
+# This is the remote directory to mount.
+REMOTE_DIR="C:/htdocs/VLF"
 
-FILE_SERVER_URL=http://proxy
-API_URL=http://app:8000
+# Stations config
+STATIONS_CONFIG=/app/ssh/stations.yml
