--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -1,13 +1,9 @@
-events { }
-http {
-  server {
-    listen 80;
-    location / {
-      return 200 'Cassandra file server';
-    }
-    location /files/ {
-      alias /mnt/vlf/;
-      autoindex on;
-    }
+server {
+  listen 80;
+  root /usr/share/nginx/html;
+
+  location / {
+    autoindex on;
+    try_files $uri $uri/ =404;
   }
 }
