--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -6,4 +6,15 @@ server {
     autoindex on;
     try_files $uri $uri/ =404;
   }
+
+  # Health check endpoint
+  location /health {
+    access_log off;
+    return 200 "healthy";
+    add_header Content-Type text/plain;
+  }
+
+  error_page   500 502 503 504  /50x.html;
+  location = /50x.html {
+  }
 }
