fix: plug campi

--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@
 FILE_SERVER_URL=http://localhost:8080
 
 # SSH Configuration for both App (listing files) and Proxy (mounting files)
-SSH_USER=user
-SSH_HOST=100.76.133.15
+SSH_USER=adriano
+SSH_HOST=100.120.212.102
 # This is the path INSIDE the container where the key will be.
 SSH_PRIVATE_KEY_PATH=/app/ssh/id_ed25519
 # This is the remote directory to mount.
