--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: cassandra_app
-    env_file: .env
     environment:
       - FILE_SERVER_URL=http://localhost:8080
+      - SSH_PRIVATE_KEY_PATH=/app/ssh/id_ed25519
     volumes: # The app only needs the ssh key to list remote files
       - ./ssh:/app/ssh:ro
     networks:
@@ -19,12 +19,11 @@ services:
       context: .
       dockerfile: proxy/Dockerfile
     container_name: cassandra_proxy
-    env_file: .env
     ports:
       - "8080:80"
     volumes:
       - ./proxy/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./ssh:/app/ssh:ro # The entrypoint script needs the key
+      - ./ssh:/app/ssh:ro # The entrypoint script needs the key and stations.yaml
     networks:
       - cassandra-network
     cap_add:
@@ -36,7 +35,6 @@ services:
 
   ui:
     build: .
-    env_file: .env
     environment:
       - FILE_SERVER_URL=http://proxy
     working_dir: /app
